// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort JSON should sort a JSON object with unconventional keys 1`] = `
"{
  \\"\\": null,
  \\"\\\\u0000\\": null,
  \\"\\\\b\\": null,
  \\"\\\\t\\": null,
  \\"\\\\n\\": null,
  \\"\\\\f\\": null,
  \\"\\\\r\\": null,
  \\" \\": null,
  \\"\\\\\\"\\": null,
  \\"'\\": null,
  \\"-10\\": null,
  \\"-10.1e10\\": null,
  \\"/\\": null,
  \\"0X10\\": null,
  \\"0x10\\": null,
  \\"10.101\\": null,
  \\"10.1e10\\": null,
  \\"1E10\\": null,
  \\"1e10\\": null,
  \\"[\\": null,
  \\"[1,2,3]\\": null,
  \\"[]\\": null,
  \\"\\\\\\\\\\": null,
  \\"false\\": null,
  \\"null\\": null,
  \\"true\\": null,
  \\"{\\": null,
  \\"{}\\": null,
  \\"￿\\": null
}
"
`;

exports[`Sort JSON should sort an unsorted JSON object 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should sort an unsorted JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should sort an unsorted JSON object within an array recursively 1`] = `
"[
  1,
  4,
  {
    \\"0\\": null,
    \\"a\\": null,
    \\"b\\": null,
    \\"exampleNestedObject\\": {
      \\"a\\": null,
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"z\\": null
    },
    \\"z\\": null
  },
  2
]
"
`;

exports[`Sort JSON should sort an unsorted deeply nested JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"anotherObject\\": {
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"yetAnother\\": {
        \\"andAnother\\": {
          \\"a\\": null,
          \\"b\\": null,
          \\"z\\": null
        }
      }
    },
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a deeply nested sorted JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"anotherObject\\": {
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"yetAnother\\": {
        \\"andAnother\\": {
          \\"a\\": null,
          \\"b\\": null,
          \\"z\\": null
        }
      }
    },
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"z\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"a\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object recursively 1`] = `
"{
  \\"0\\": null,
  \\"a\\": null,
  \\"b\\": null,
  \\"exampleNestedObject\\": {
    \\"a\\": null,
    \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
    \\"examplePrimitive\\": 1,
    \\"z\\": null
  },
  \\"z\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object with unconventional keys 1`] = `
"{
  \\"\\": null,
  \\"\\\\u0000\\": null,
  \\"\\\\b\\": null,
  \\"\\\\t\\": null,
  \\"\\\\n\\": null,
  \\"\\\\f\\": null,
  \\"\\\\r\\": null,
  \\" \\": null,
  \\"\\\\\\"\\": null,
  \\"'\\": null,
  \\"-10\\": null,
  \\"-10.1e10\\": null,
  \\"/\\": null,
  \\"0X10\\": null,
  \\"0x10\\": null,
  \\"10.101\\": null,
  \\"10.1e10\\": null,
  \\"1E10\\": null,
  \\"1e10\\": null,
  \\"[\\": null,
  \\"[1,2,3]\\": null,
  \\"[]\\": null,
  \\"\\\\\\\\\\": null,
  \\"false\\": null,
  \\"null\\": null,
  \\"true\\": null,
  \\"{\\": null,
  \\"{}\\": null,
  \\"￿\\": null
}
"
`;

exports[`Sort JSON should validate a sorted JSON object within an array recursively 1`] = `
"[
  1,
  4,
  {
    \\"0\\": null,
    \\"a\\": null,
    \\"b\\": null,
    \\"exampleNestedObject\\": {
      \\"a\\": null,
      \\"exampleArray\\": [\\"z\\", \\"b\\", \\"a\\"],
      \\"examplePrimitive\\": 1,
      \\"z\\": null
    },
    \\"z\\": null
  },
  2
]
"
`;
